[package]
name = "youtube_live_alert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
reqwest = { version = "0.10.0", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
